# SVM

./: CMakeLists.txt  MYSVM.cpp  MYSVM.h  README.md  download.sh  main.cpp  makefile
inc/: CutPic.h  MYSVM.h
src/: CutPic.cpp  MYSVM.cpp  main.cpp
